# selfci

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile
.config/flakebox/: id
.config/selfci/: ci.sh  ci.yaml  ci.yml  config.yml
.github/: README.md
.github/workflows/: flakebox-ci.yml
docs/: hooks.md  jobs.md
share/: ci-template.yaml  config-template.yml  local-template.yaml
src/: config.rs  constants.rs  duct_util.rs  envs.rs  error.rs  exit_codes.rs  lib.rs  main.rs  mq_protocol.rs  opts.rs  protocol.rs  revision.rs  step.rs
src/cmd/: check.rs  mod.rs  mq.rs  worker.rs
tests/: check_merge_test.rs  config_tests.rs  integration_test.rs  mq_hooks_test.rs  mq_merge_test.rs  vcs_detection.rs  vcs_operations.rs
tests/common/: mod.rs
