[package]
name = "selfci"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
error_set = "0.9"
tempfile = "3.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
duct = "0.13"
rand = "0.8"
scopeguard = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
ciborium = "0.2"
humantime = "2.1"
