[package]
name = "selfci"
version = "0.2.0"
edition = "2024"
description = "SelfCI is a minimalistic local-first Unix-philosophy-abiding CI."
license = "MPL-2.0"
repository = "https://app.radicle.xyz/nodes/radicle.dpc.pw/rad:z2tDzYbAXxTQEKTGFVwiJPajkbeDU"
homepage = "https://app.radicle.xyz/nodes/radicle.dpc.pw/rad:z2tDzYbAXxTQEKTGFVwiJPajkbeDU"
readme = "README.md"
keywords = ["ci"]
categories = ["development-tools"]
authors = ["dpc <dpc@dpc.pw>"]
rust-version = "1.92"

[lints.clippy]
dbg_macro = "warn"
literal_string_with_formatting_args = "deny"

[[bin]]
name = "selfci"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
error_set = "0.9.1"
tempfile = "3.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
duct = "0.13"
rand = "0.8"
scopeguard = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
ciborium = "0.2"
humantime = "2.1"
daemonize = "0.5"
nix = { version = "0.29", features = ["signal", "process", "fs", "user"] }
dirs = "5.0"
signal-hook = "0.3"

[profile]

[profile.ci]
inherits = "dev"
incremental = false
debug = "line-tables-only"
lto = "off"
